--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+       os: [ubuntu-latest,windows-latest, macOS-latest]
 
     steps:
     - uses: actions/checkout@v4
