--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,5 +31,5 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean
+      run: mvn clean install
 
